--- a/CloverBot/CloverBot.csproj
+++ b/CloverBot/CloverBot.csproj
@@ -2,9 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-    <StartupObject>CloverBot.Script.Program</StartupObject>
+    <TargetFramework>net6.0</TargetFramework>
+    <StartupObject>CloverBot.MainScript.Program</StartupObject>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <AnalysisLevel>6.0-recommended</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,8 +16,7 @@
 
   <ItemGroup>
     <Folder Include="Resources\" />
-    <Folder Include="Sources\CloverBot\Model\" />
-    <Folder Include="Sources\Database\" />
+    <Folder Include="Sources\CloverBot\Action\" />
   </ItemGroup>
 
 </Project>
